# vacancy_parser

./: main.py  pyproject.toml
src/: api_asker.py  converter.py  creator_of_vacancies.py  utils.py  vacancy.py  vacancy_manager.py
tests/: conftest.py  test_api_asker.py  test_converter.py  test_creator_of_vacancies.py  test_vacancy.py  test_vacancy_manager.py
