[tool.poetry]
name = "vacancy-parser"
version = "0.1.0"
description = ""
authors = ["Nikolai <kolamba.r@gmail.com>"]
readme = "README.md"
packages = [{include = "vacancy_parser"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pytest = "^7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
